--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,26 @@
+                                                                                                                                                                               
+
+
+/*why can I not write without sean making changes to permissions. were all in the same group?*/
+
+
+
+#all{
+    text-align: center;
+}
+
+
+#welcomeBox{
+    border: 1px solid black;
+    width: 200px;
+    height: 150px;
+    position: absolute;
+}
+
+
+
+
+
+
+
 
